# hackthon-ai-book-spkit

./: .gitignore  test_implementation.py
.claude/: settings.local.json
ai_frontend_book/: docusaurus.config.ts  package-lock.json  sidebars.ts  tsconfig.json
backend/: .env  .env.example  API.md  Dockerfile  README.md  agent.py  config.py  ingest.py  ingest_content.py  load_test.py  main.py  pyproject.toml  requirements.txt  setup.py  start_server.py  test_api.py  test_chat.py  test_e2e.py  test_imports.py  test_integration.py  test_qdrant.py  test_security.py  test_structure_mock.py
backend/.claude/: settings.local.json
backend/models/: book_content.py  query.py
backend/services/: embedding_service.py  ingestion_service.py  qdrant_service.py  rag_service.py
backend/src/: __init__.py  config.py
backend/src/agent/: __init__.py  answer_generator.py  query_embedder.py  rag_agent.py  retriever.py
backend/src/content_ingestion/: embedder.py  loader.py  main.py  models.py  processor.py
backend/src/embeddings/: __init__.py  cohere_client.py  local_client.py
backend/src/ingest/: __init__.py  page_fetcher.py  sitemap_parser.py  sitemap_validator.py  text_extractor.py
backend/src/llm/: __init__.py  openrouter_client.py
backend/src/models/: __init__.py  book_content.py  chat.py
backend/src/rag_agent/: agent.py  config.py  main.py  models.py  retrieval.py
backend/src/retrieval_validation/: client.py  config.py  main.py  models.py  validator.py
backend/src/shared/: config.py  logging_config.py  models.py  qdrant_client.py  utils.py
backend/src/utils/: __init__.py  embedding_cache.py  logger.py  retry.py
backend/src/vector_db/: __init__.py  qdrant_client.py
backend/tests/integration/: test_basic_flow.py
backend/tests/unit/: test_config.py  test_sitemap_parser.py
backend/utils/: html_parser.py  sitemap_parser.py  text_splitter.py
docs/: api-documentation.md  deployment-instructions.md  selected-text-functionality.md  (+1 more)
(+157 files in other folders)
