[project]
name = "rag-chatbot-backend"
version = "0.1.0"
description = "Backend for RAG Chatbot integrated with Docusaurus book"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "cohere>=5.5.3",
    "qdrant-client>=1.9.0",
    "python-dotenv>=1.0.0",
    "markdown>=3.5.1",
    "PyYAML>=6.0.1",
]